<?xml version="1.0" encoding="utf-8"?>
<resources>
    
	<string name="app_name">Online Unlocker</string>
	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="login">Log In</string>
	<string name="app_title">Welcome to Online Unlocker</string>
	<string name="app_logo">Welcome to Online Unlocker</string>
	<string name="welcome_message">Login Succcessful</string>
	<string name="title_activity_user_info">UserInfo</string>
	<string name="main_no_items">No locks have been added to your name!</string>
	<string name="lock_id">Lock_XX</string>
	<string name="empty_text">Currently you do not have any locks added to your account!</string>
	<string name="add_lock">Lock ID</string>
	<string name="logout">Logout</string>
	<string name="add">Add</string>
	<string name="lock_description">Enter following details to get started.</string>
	<string name="lock_comments">Lock Description</string>	
	<string name="new_user">Sign Up</string>
	<string name="retype_password">Retype Password</string>
	<string name="first_name">First Name</string>
	<string name="last_name">Last Name</string>
	<string name="comments">Lock Name</string>
	<string name="addCurLocation">Set Current Location as Home Location.</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="userMessage">Please review your information!</string>
	
</resources>
