<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bkg"
    android:gravity="fill_horizontal" >
    
	<ImageView
	        android:id="@+id/appLogo"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="48dp"
	        android:layout_marginTop="26dp"
	        android:contentDescription="@string/app_logo"
	        android:src="@drawable/lock_icon" />

	<TextView
	    android:id="@+id/appTitle"
	    android:layout_width="150dp"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/appLogo"
	    android:layout_marginLeft="31dp"
	    android:layout_toRightOf="@+id/appLogo"
	    android:text="@string/app_title"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textColor="@android:color/white" />

	<EditText
	    android:id="@+id/firstName"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/appLogo"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="26dp"
	    android:ems="10"
	    android:hint="@string/first_name" >

	    <requestFocus />
	</EditText>

	<EditText
	    android:id="@+id/lastName"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/firstName"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="14dp"
	    android:ems="10"
	    android:hint="@string/last_name" />

	<EditText
	    android:id="@+id/password"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/userName"
	    android:layout_alignRight="@+id/userName"
	    android:layout_below="@+id/userName"
	    android:layout_marginTop="24dp"
	    android:ems="10"
	    android:hint="@string/password"
	    android:inputType="textPassword" />

	<EditText
	    android:id="@+id/passwordAgain"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/password"
	    android:layout_alignRight="@+id/password"
	    android:layout_below="@+id/password"
	    android:layout_marginTop="20dp"
	    android:ems="10"
	    android:hint="@string/retype_password"
	    android:inputType="textPassword" />

	<EditText
	    android:id="@+id/userName"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/lastName"
	    android:layout_below="@+id/lastName"
	    android:layout_marginTop="24dp"
	    android:ems="10"
	    android:hint="@string/username" />

	<Button
	    android:id="@+id/register"
	    style="?android:attr/buttonStyleSmall"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/passwordAgain"
	    android:layout_alignRight="@+id/appTitle"
	    android:layout_below="@+id/passwordAgain"
	    android:layout_marginTop="36dp"
	    android:background="@drawable/green_button"
	    android:text="@string/new_user" 
	    android:textColor="@android:color/white" />

</RelativeLayout>