<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg"
    android:gravity="fill_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.acnproject_v1_0.MainActivity$PlaceholderFragment" >

	<TextView
	    android:id="@+id/appTitle"
	    android:layout_width="150dp"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/appLogo"
	    android:layout_marginLeft="31dp"
	    android:layout_toRightOf="@+id/appLogo"
	    android:text="@string/app_title"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textColor="@android:color/white" />

	<ImageView
	    android:id="@+id/appLogo"
	    android:layout_width="50dp"
	    android:layout_height="50dp"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="34dp"
	    android:layout_marginTop="60dp"
	    android:contentDescription="@string/app_logo"
	    android:src="@drawable/lock_icon" />

	<TextView
	    android:id="@+id/userMessage"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/editLockComments"
	    android:layout_below="@+id/appTitle"
	    android:layout_marginTop="50dp"
	    android:text="@string/userMessage"
	    android:textColor="@android:color/black" />

	<EditText
	    android:id="@+id/editLockComments"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/userMessage"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="34dp"
	    android:ems="10"
	    android:hint="@string/comments" />

	<CheckBox
	    android:id="@+id/addCurrentLoc"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/editLockComments"
	    android:layout_alignRight="@+id/editLockComments"
	    android:layout_below="@+id/editLockComments"
	    android:layout_marginTop="29dp"
	    android:text="@string/addCurLocation" />

	<Button
	    android:id="@+id/saveButton"
	    style="@style/btnStyleGenoa"
	    android:layout_width="70dp"
	    android:layout_height="40dp"
	    android:layout_alignLeft="@+id/addCurrentLoc"
	    android:layout_below="@+id/addCurrentLoc"
	    android:layout_marginTop="38dp"
	    android:text="@string/save" />

	<Button
	    android:id="@+id/cancelButton"
	    style="@style/btnStylesorbus"
	    android:layout_width="70dp"
	    android:layout_height="40dp"
	    android:layout_alignBaseline="@+id/saveButton"
	    android:layout_alignBottom="@+id/saveButton"
	    android:layout_alignRight="@+id/addCurrentLoc"
	    android:text="@string/cancel" />
	
</RelativeLayout>