<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg"
    android:gravity="fill_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.acnproject_v1_0.MainActivity$PlaceholderFragment" >

	<TextView
	    android:id="@+id/appTitle"
	    android:layout_width="150dp"
	    android:layout_height="wrap_content"
	    android:layout_alignBottom="@+id/appLogo"
	    android:layout_marginLeft="31dp"
	    android:layout_toRightOf="@+id/appLogo"
	    android:text="@string/app_title"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:textColor="@android:color/white" />

	<ImageView
	    android:id="@+id/appLogo"
	    android:layout_width="50dp"
	    android:layout_height="50dp"
	    android:layout_alignParentTop="true"
	    android:layout_marginLeft="34dp"
	    android:layout_marginTop="60dp"
	    android:contentDescription="@string/app_logo"
	    android:src="@drawable/lock_icon" />

	<EditText
	    android:id="@+id/editLockComments"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/appLogo"
	    android:layout_below="@+id/appTitle"
	    android:layout_marginTop="34dp"
	    android:ems="10"
	    android:hint="@string/username" />

	<EditText
	    android:id="@+id/passwordField"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/editLockComments"
	    android:layout_below="@+id/editLockComments"
	    android:layout_marginTop="32dp"
	    android:ems="10"
	    android:fontFamily="sans-serif"
	    android:hint="@string/password"
	    android:inputType="textPassword" />

	<Button
	    android:id="@+id/loginButton"
	    android:layout_width="100dp"
	    android:layout_height="40dp"
	    android:layout_alignLeft="@+id/passwordField"
	    android:layout_alignRight="@+id/passwordField"
	    android:layout_below="@+id/passwordField"
	    android:layout_marginTop="31dp"
	    android:text="@string/login"
	    style="@style/btnStyleGenoa"
	    android:textColor="@android:color/white" />

	<Button
	    android:id="@+id/signupButton"
	    android:layout_width="130dp"
	    android:layout_height="40dp"
	    android:layout_alignLeft="@+id/loginButton"
	    android:layout_alignRight="@+id/loginButton"
	    android:layout_below="@+id/loginButton"
	    android:layout_marginTop="32dp"
	    android:text="@string/new_user"
	    style="@style/btnStyledark_khaki"
	    android:textColor="@android:color/white" />
	
</RelativeLayout>