<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg"
    android:gravity="fill_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.acnproject_v1_0.UserInfo$PlaceholderFragment" >

    <TextView
        android:id="@+id/emptyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_text"
        android:textColor="#FFFFFF" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignTop="@+id/emptyText"
        android:layout_centerHorizontal="true" >
    </ListView>

    <Button
        android:id="@+id/logout"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white" 
        android:layout_alignTop="@+id/addNewLock"
        android:text="@string/logout" />

    <Button
        android:id="@+id/addNewLock"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lockID"
        android:layout_marginTop="73dp"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white" 
        android:text="@string/add" />

    <EditText
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logout"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="18dp"
        android:hint="@string/lock_comments"
        android:ems="10" />

    <TextView
        android:id="@+id/lockDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/emptyText"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF" 
        android:text="@string/lock_description" />

    <EditText
        android:id="@+id/lockID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lockDescription"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/add_lock" />

</RelativeLayout>